--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Hola estudiantes este es mi sitio web
-        sigueme en twitter en celismx si tienes dudas, preguntame
+        sigueme en twitter en celismx si tienes dudas, preguntame en vivo en mi twitch
     </p>
 </body>
 </html>
